fixed form control alignment

--- a/src/components/auth/Form.css
+++ b/src/components/auth/Form.css
@@ -150,6 +150,15 @@
   border-color: #FFFFFF;
 }
 
+.RegisterForm textarea,
+.EditProfile textarea {
+  height: 234px;
+}
+
+.EditProfile__applicant textarea {
+  height: 279px;
+}
+
 .form-group textarea:focus {
   box-shadow: none;
   border: 2px solid #01C688;
